--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,11 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+bdk = "0.30.2"
+bdk_esplora = "0.22.1"
+dotenv = "0.15.0"
+mongodb = "3.3.0"
+reqwest = "0.12.23"
+serde = "1.0.228"
+serde_json = "1.0.145"
+tokio = "1.47.1"
