--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 name = "bitWallet"
 version = "0.1.0"
-edition = "2024"
+edition = "2021"
 
 [dependencies]
 bdk = "0.30.2"
 bdk_esplora = "0.22.1"
 dotenv = "0.15.0"
 mongodb = "3.3.0"
-reqwest = "0.12.23"
-serde = "1.0.228"
-serde_json = "1.0.145"
-tokio = "1.47.1"
+reqwest = { version = "0.12.4", features = ["json"] } # enable JSON if you need
+serde = { version = "1.0", features = ["derive"] }    # enable derive for structs
+serde_json = "1.0"
+tokio = { version = "1.47", features = ["full"] }     # enable full runtime
