--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 bdk = "0.30.2"
 bdk_esplora = "0.22.1"
 dotenv = "0.15.0"
+futures = "0.3.31"
 mongodb = "3.3.0"
 reqwest = { version = "0.12.4", features = ["json"] } # enable JSON if you need
 serde = { version = "1.0", features = ["derive"] }    # enable derive for structs
