--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 [dependencies]
 bdk = "0.30.2"
 bdk_esplora = "0.22.1"
-chrono = "0.4.42"
+chrono = { version = "0.4.42", features = ["serde"] }
+
 dotenv = "0.15.0"
 futures = "0.3.31"
 mongodb = "3.3.0"
